<resources>
    <string name="app_name">PendoRecipeApp</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email_address">Email Address</string>
    <string name="username">Username</string>
    <string name="password2">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="full_name">Full Name</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="pizza">Mexico cuisines</string>
    <string name="beef">Chinese cuisines</string>
    <string name="todo">TODO</string>
    <string name="pendo_for_fresh_recipes">Pendo For Fresh Recipes</string>
    <string name="burger">American Cuisines</string>
    <string name="chicken">French Cuisines</string>
    <string name="roast">Italian Cuisines</string>
    <string name="rolls">Indian Cuisines</string>
    <string name="greek_style_pizza">Greek style pizza</string>
    <string name="made_up_of_artichokes_feta_cheese_and_kalamata_olives">Made up of artichokes, feta cheese, and Kalamata olives</string>
    <string name="owned_by_mwine_robert">Owned by Mwine Robert</string>
    <string name="italian_beef">Italian Beef</string>
    <string name="made_up_ofthinly_sliced_seasoned_layers_of_roast_beef_in_a_dense_and_chewy_italian_style_roll">Made up ofthinly sliced, seasoned layers of roast beef in a dense and chewy Italian-style roll</string>
    <string name="owned_by_mugabi_charles">Owned by Mugabi Charles</string>
    <string name="new_york_city_bagels">New York City Bagels</string>
    <string name="made_with_garlic_onion_cinnamon_and_raisins_best_enjoyed_fresh_out_of_the_oven_and_paired_with_butter_scallions_lox_and_cream_cheese">Made with garlic, onion, cinnamon, and raisins, best enjoyed fresh out of the oven and paired with butter, scallions, lox, and cream cheese</string>
    <string name="owned_by_bwiza_angel">Owned by Bwiza Angel</string>
    <string name="dip_sandwich">Dip Sandwich</string>
    <string name="made_with_coleslaw_potato_and_macaroni_salad_hard_boiled_eggs_sweet_or_sour_pickles_black_olives_and_yellow_chile_peppers">Made with coleslaw, potato, and macaroni salad, hard-boiled eggs, sweet or sour pickles, black olives, and yellow chile peppers</string>
    <string name="owned_by_murezi_amos">Owned by Murezi Amos</string>
    <string name="owned_by_atwine_molly">Owned by Atwine Molly</string>
    <string name="made_with_vegetables_cheese_pepper">Made with vegetables, cheese, pepper</string>
    <string name="spring_rolls">Spring Rolls</string>
    <string name="quick_noodles">Quick noodles</string>
    <string name="noodles_tossed_with_veggies_lemon_juice_peanuts">Noodles tossed with veggies, lemon juice, peanuts</string>
    <string name="owned_by_mugisha_richard">Owned by Mugisha Richard</string>
    <string name="mujuni_amon">Mujuni Amon</string>
    <string name="made_with_rice_vegetarian_spices">Made with rice, vegetarian, spices</string>
    <string name="owned_by_atujuna_dorothy">Owned by Atujuna Dorothy</string>
    <string name="pargiana">Pargiana</string>
    <string name="made_with_tomato_sauce_and_more_cheeses_such_as_mozzarella_pecorino_siciliano_scamorza_and_caciocavallo_silano">Made with tomato sauce and more cheeses, such as mozzarella, pecorino Siciliano, scamorza, and caciocavallo Silano</string>
    <string name="belongs_to_ivan_baker">Belongs to Ivan Baker</string>
    <string name="porchetta">Porchetta</string>
    <string name="made_with_meat_salt_garlic_rosemary_fennel_seeds_or_aromatic_herbs">Made with meat, salt, garlic, rosemary, fennel seeds or aromatic herbs</string>
    <string name="belongs_to_namudu_lydia">Belongs to Namudu Lydia</string>
    <string name="spaghetti_alla_portanesca">Spaghetti alla portanesca</string>
    <string name="mad_with_spaghetti_tomatoes_olive_oil_black_gaeta_olives_salted_anchovies_chili_peppers">Mad with spaghetti, tomatoes, olive oil, black Gaeta olives, salted anchovies, chili peppers</string>
    <string name="belongs_to_moses_ali">Belongs to Moses Ali</string>
    <string name="belongs_to_twine_benon">Belongs to Twine Benon</string>
    <string name="belongs_to_mugabi_charles">Belongs to Mugabi Charles</string>
    <string name="belongs_to_bwiza_angel">Belongs to Bwiza Ange</string>
    <string name="belongs_to_murezi_amos">Belongs to Murezi Moses</string>
    <string name="no_account_sign_up">No Account? Sign Up</string>
    <string name="found_throughout_southern_italy_parmigiana_di_melanzane_is_a_type_of_gratinated_vegetable_casserole_traditionally_made_of_fried_or_grilled_slices_of_eggplant_layered_with_basil_flavored_tomato_sauce_and_topped_with_one_or_more_cheeses_such_as_mozzarella_pecorino_siciliano_scamorza_and_caciocavallo_silano">Found throughout southern Italy, parmigiana di melanzane is a type of gratinated vegetable casserole traditionally made of fried or grilled slices of eggplant layered with basil-flavored tomato sauce and topped with one or more cheeses, such as mozzarella, pecorino Siciliano, scamorza, and caciocavallo Silano.</string>
</resources>
