<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/italian_cuisine_image"
        android:layout_width="194dp"
        android:layout_height="182dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:onClick="ItalianClicked"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        app:srcCompat="@drawable/meal"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="108dp"
        android:layout_height="186dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="45dp"
        app:srcCompat="@drawable/rolls"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/chinese_image_view"
        android:layout_width="181dp"
        android:layout_height="173dp"
        android:layout_below="@+id/imageView11"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="50dp"
        android:onClick="ChineseClicked"
        android:layout_marginBottom="281dp"
        app:srcCompat="@drawable/roast"
        tools:ignore="UnknownId"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/pendo_for_fresh_recipes"
        android:textColor="#FF5722"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/cuisine_name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="208dp"
        android:text="@string/burger"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cuisine_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/pizza"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cusine_name3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="263dp"
        android:text="@string/beef"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cuisine_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="266dp"
        android:text="@string/chicken"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cuisine_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginBottom="18dp"
        android:text="@string/roast"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cuisine_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginBottom="52dp"
        android:text="@string/rolls"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="140dp"
        android:layout_height="159dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        app:srcCompat="@drawable/chicken1"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="155dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        app:srcCompat="@drawable/pizza1"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/american_image_button"
        android:layout_width="163dp"
        android:layout_height="145dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="AmericanCuisine"
        android:layout_marginStart="22dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/burger"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="22dp" />

</RelativeLayout>